<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".RegisterActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />


    <EditText
        android:id="@+id/EditText_Username"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:background="#ffffff"
        android:hint="@string/username"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/EditText_Password"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:background="#ffffff"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="no" />

    <EditText
        android:id="@+id/EditText_Confirm_Password"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:background="#ffffff"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:autofillHints="no" />

    <EditText
        android:id="@+id/EditText_Email"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:background="#ffffff"
        android:hint="@string/email"
        android:inputType="text"
        android:autofillHints="no"/>



    <EditText
        android:id="@+id/EditText_Phone_Number"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:autofillHints="no"
        android:background="#ffffff"
        android:hint="@string/phone_number"
        android:inputType="number" />

    <Button
        android:id="@+id/Button_Register"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:text="@string/register" />


</LinearLayout>

